<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register_user">
    <androidx.cardview.widget.CardView
        android:id="@+id/newuser"
        android:layout_width="416dp"
        android:layout_height="150dp"
        android:layout_marginEnd="70dp"
        android:outlineAmbientShadowColor="#5255F1"
        app:cardBackgroundColor="#5255F1"
        app:cardCornerRadius="60dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text=" New User"
            android:textColor="@color/white"
            android:textSize="50sp" />


    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/new_email"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="30dp"
        app:cardBackgroundColor="#C8DEF6"
        app:cardCornerRadius="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newuser"
        app:layout_constraintVertical_bias="0.100000024">

        <EditText
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:background="@drawable/no_background"
            android:gravity="center|start"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:paddingStart="30dp"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="30dp"
        app:cardBackgroundColor="#C8DEF6"
        app:cardCornerRadius="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_email"
        app:layout_constraintVertical_bias="0.050000012">

        <EditText
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:background="@drawable/no_background"
            android:drawableEnd="@drawable/ic_baseline_visibility_24"
            android:gravity="center|start"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="30dp"
            android:paddingEnd="20dp"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView200"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="30dp"
        app:cardBackgroundColor="#C8DEF6"
        app:cardCornerRadius="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView6"
        app:layout_constraintVertical_bias="0.050000012">

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:background="@drawable/no_background"
            android:drawableEnd="@drawable/ic_baseline_visibility_24"
            android:gravity="center|start"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingStart="30dp"
            android:paddingEnd="20dp"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardsignup"
        android:layout_width="match_parent"
        android:layout_height="80dp"

        android:layout_margin="30dp"
        app:cardCornerRadius="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView200"
        app:layout_constraintVertical_bias="0.050000012">


        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#5255F1"
            android:gravity="center"
            android:text="Signup"
            android:textColor="@color/white"
            android:textSize="25dp" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>